# cli-play

./: Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs  utils.rs
tests/: trycmd.rs
tests/cmd/: trycmd.toml
