[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""playing with cli tools"""
edition    ="2021"
name      ="cli-play"
repository="https://github.com/thor314/cli-play"
version   ="0.1.0"

[dependencies]
anyhow    ="1.0"
log       ="0.4"
thiserror ="1.0"
env_logger="0.11"
dotenv    ="0.15"
clap      ={ version="4.4.16", features=["derive"] }
delegate  ="0.12.0"                                  # useful for subcommand-style cli

[dev-dependencies]
trycmd = "0.14.20"
